Fix repo select cog not showing up

--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -223,6 +223,13 @@ body {
     user-select: none;
 }
 
+#user-repo {
+    background-image: url(../imgs/cog.svg);
+    background-repeat: no-repeat;
+    background-position: right 65%;
+    padding-right: 40px;
+}
+
 .repo-select {
     position: relative;
 }
